sumo/tests/duarouter/errors/false_output/errors.duarouter
Error: The file 'output/routes.rou.xml' could not be opened for writing.
Quitting (on error).
